--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,61 +1,31 @@
-name: Free Ubuntu VPS with SSH (tmux + 3 nexus panes)
+name: Free Ubuntu VPS with SSH
 
 on:
   workflow_dispatch:
-
-concurrency:
-  group: vps-${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: false
+  schedule:
+    - cron: "0 */5 * * *"    # restart mỗi 5 giờ
 
 jobs:
   vps:
     runs-on: ubuntu-latest
-    timeout-minutes: 360
-
-    env:
-      NEXUS_DIR: ${{ github.workspace }}/nexus-cli/clients/cli
-      NEXUS_BIN: ${{ github.workspace }}/nexus-cli/clients/cli/target/release/nexus
+    timeout-minutes: 355
 
     steps:
-      - name: Base packages
+      - name: Update & Install tools
         run: |
-          set -euxo pipefail
           sudo apt-get update
-          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-            tmux curl ca-certificates git protobuf-compiler
+          sudo apt-get install -y build-essential pkg-config libssl-dev git curl protobuf-compiler
 
       - name: Install Rust
         run: |
-          set -euxo pipefail
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
       - name: Build Nexus CLI
         run: |
-          set -euxo pipefail
           git clone https://github.com/nexus-xyz/nexus-cli.git
-          cd "$NEXUS_DIR"
+          cd nexus-cli/clients/cli
           cargo build --release
-          test -x "$NEXUS_BIN"
-          echo "::notice::Nexus CLI build done: $NEXUS_BIN"
-
-      - name: Prepare tmux with 3 windows running nexus
-        run: |
-          set -euxo pipefail
-
-          # 1) Tạo session chỉ mở bash, để server không chết nếu lệnh fail
-          tmux new-session -d -s nexus -n win1 "bash -l"
-          tmux new-window  -t nexus:1 -n win2 "bash -l"
-          tmux new-window  -t nexus:2 -n win3 "bash -l"
-
-          # 2) Gửi lệnh vào từng window (giữ cửa sổ luôn mở với 'exec bash')
-          # Bạn có thể thay subcommand bên dưới cho phù hợp (ví dụ: 'network run', 'node start',...)
-          tmux send-keys -t nexus:0 "cd '$NEXUS_DIR' && '$NEXUS_BIN' --help | tee -a ~/nexus1.log ; exec bash" C-m
-          tmux send-keys -t nexus:1 "cd '$NEXUS_DIR' && '$NEXUS_BIN' --help | tee -a ~/nexus2.log ; exec bash" C-m
-          tmux send-keys -t nexus:2 "cd '$NEXUS_DIR' && '$NEXUS_BIN' --help | tee -a ~/nexus3.log ; exec bash" C-m
-
-          tmux ls || true
-          echo "::notice::tmux session 'nexus' ready. Attach with: tmux attach -t nexus"
 
       - name: Start SSH (tmate)
         uses: mxschmitt/action-tmate@v3
